# cam-flow

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
archive/: README.md
archive/demo/: workflow.yaml
demo/: workflow_daemon.yaml  workflow_v2.yaml
demo/cli_light_v3/: CLAUDE.md
demo/cli_light_v4/: CLAUDE.md  workflow.yaml
demo/cli_lite_v6/: CLAUDE.md  runtime.md
demo/cli_lite_v7/: workflow.yaml
docs/: architecture.md  cam-phase-plan.md  evaluation.md  ideas-backlog.md  lessons-2026-04-19.md  roadmap.md  self-monitoring.md  strategy.md
examples/cam/: CLAUDE.md  run.py
examples/sdk/: run.py
runtime/daemon/: persistence.py  resume.py  state_store.py
runtime/engine/: parser.py
skills/cam-flow/: SKILL.md
skills/camflow/: SKILL.md
skills/camflow-creator/: SKILL.md
skills/camflow-manager/: SKILL.md
skills/camflow-runner/: SKILL.md
skills/systematic-debugging/: SKILL.md
skills/task-decomposition/: SKILL.md
skills/task-router/: SKILL.md
spec/: execution-backends.md  memory-policy.md  rule-backend.md  webhook-policy.md
src/camflow/: __init__.py  paths.py
tests/: conftest.py
tests/error_injection/: conftest.py  test_loop_detection.py  test_missing_result_file.py  test_workflow_timeout.py
tests/integration/: conftest.py  test_cmd_only.py  test_dry_run.py  test_lessons_flow.py  test_retry_context.py  test_stateless_loop.py  test_watchdog_live.py
tests/resume/: test_resume_clean.py
tests/unit/: test_agent_planner.py  test_brainstorm.py  test_cleanup.py  test_cmd_runner.py  test_confirm_flow.py  test_crash_recovery.py  (+38 more)
(+91 files in other folders)
